# flat-cmake

./: CMakeLists.txt  COPYING
libs/Boost/: CMakeLists.txt
modules/Android/: AndroidConfig.cmake  AndroidConfigureJniProject.cmake  AndroidExtractPackageName.cmake  AndroidGenerateApkPackage.cmake  AndroidGenerateAssetsSourceFilesTarget.cmake  AndroidGenerateDexFiles.cmake  AndroidGenerateIdlJavaFiles.cmake  AndroidGenerateIdlSourceFilesTarget.cmake  AndroidGenerateJavaClassFiles.cmake  AndroidGenerateJniLibrariesTarget.cmake  AndroidGenerateNoCompressAssetsJars.cmake  AndroidGenerateRJavaFile.cmake  AndroidGenerateResourcePackage.cmake  AndroidGenerateResourceSourceFilesTarget.cmake  AndroidGenerateSignedPackage.cmake  AndroidInstallFiles.cmake  AndroidManifestPackage.xquery  AndroidPushFiles.cmake  AndroidUtil.cmake  collect-compile-dependencies.py  collect-packages.py  collect-resource-files.py  generate-r-java-files.py  parse-manifest.py  parse-sdk.py  select-build-tools.py  utils.py
modules/BrightScript/: BrightScriptConfig.cmake  brs.py  create-auth-token.py  create-update-file.py  create-zip.py  get-auth-token-channels.py  merge-libs.py  merge-manifests.py  merge-modules.py  pkg.py  sideload.py
modules/Flat/: FlatConfig.cmake  Sync.py  Utils.cmake  check-git-revision.py  check-pch-deps.py  collect-files.py  erase-current-dir.py  generate-git-tree.py  generate-pch-deps.py  generate-pch-flags.py  generate-pch.py  generate-qmldir-loader.py  generate-qrc.py  reconfigure-cmake.py  run-with-env.py.in  sync-directory.py
modules/Glsl/: GlslConfig.cmake
modules/JavaTools/: JavaToolsConfig.cmake  JavaToolsGenerateJarPackage.cmake  JavaToolsGenerateJavaClassFiles.cmake  JavaToolsGenerateJavaSourceFilesTarget.cmake  JavaToolsGenerateSignedPackage.cmake  JavaToolsUtil.cmake
modules/Nacl/: NaclConfig.cmake
modules/Necessitas/: NecessitasConfig.cmake  NecessitasDeployQt.cmake  NecessitasGenerateLibs.cmake  NecessitasGeneratePlainAssets.cmake  NecessitasGenerateSourceFilesTarget.cmake  generate-android-manifest.py  libs.xml.in
modules/OpenAL/: OpenALConfig.cmake
modules/PythonCompiler/: PythonCompilerConfig.cmake  python-compiler.py
modules/QmlCompiler/: QmlCompilerConfig.cmake  fix-cpp.py  fix-qt-version.py  generate-qml-loader.py
modules/Refactor/: RefactorConfig.cmake  collect-files.py  hash-files.py  sum.py  verify.py
scripts/: example-config.yaml  generate-qtproject.py
tests/: CMakeLists.txt
tests/sync-simple/: CMakeLists.txt  check.py
